@@ -107,10 +107,17 @@ extern const char *rj_char_utf8(SEXP);
 #define maxJavaPars 32
 #endif
 
+/* signatures are stored in a local buffer if they fit. Only if they don't fit a heap buffer is allocated and used. */
+typedef struct sig_buffer {
+	char *sig; /* if sig doesn't point to sigbuf then it's allocated from heap */
+	int maxsig, len;
+	char sigbuf[256]; /* default size of the local buffer (on the stack) */
+} sig_buffer_t;
+
 /* structure used to pass arguments across threads */
 typedef struct call_interface {
 	const char *clnam, *retsig, *mnam;
-	char sig[256];
+	sig_buffer_t sig;
 	jvalue jpar[maxJavaPars];
 	jobject tmpo[maxJavaPars+1];
 	jobject o;
@@ -148,7 +155,9 @@ extern jobject  oClassLoader;
 /* in Rglue */
 HIDE SEXP j2SEXP(JNIEnv *env, jobject o, int releaseLocal);
 HIDE SEXP new_jobjRef(JNIEnv *env, jobject o, const char *klass);
-HIDE jvalue  R1par2jvalue(JNIEnv *env, SEXP par, char *sig, jobject *otr);
+HIDE jvalue R1par2jvalue(JNIEnv *env, SEXP par, sig_buffer_t *sig, jobject *otr);
+HIDE void init_sigbuf(sig_buffer_t *sb);
+HIDE void done_sigbuf(sig_buffer_t *sb);
 
 /* in tools.c */
 HIDE jstring callToString(JNIEnv *env, jobject o);
